# memoLib

./: $null  .cache_ggshield  .cloudflare-deploy  .copilotignore  .coverage  .coveragerc  .cursorrules  .dockerignore  .dockerignore.secure  .editorconfig  .env  .env.cloudflare.example  .env.complete.example  .env.docker  .env.docker.example  .env.example  .env.fastapi  .env.github-app.example  .env.infrastructure  .env.legal-integrations  .env.licorne  .env.local.backup  .env.local.example  .env.minimal  .env.msconseils  .env.production  .env.security  .env.template  .env.vault  .env_pythonanywhere  .eslintrc.json  .flake8  .gitattributes  .gitguardian.yml  .gitignore  .gitignore.test  .gitignore.venv  .gitmodules  .jest-onlyChanged.json  .lintstagedrc.js  (+1642 more)
.cursor/: config.json
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/: AUDIT_CI_CHECKLIST_SCORE.md  BRANCH_PROTECTION.md  CODEOWNERS  COST_OPTIMIZATION.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.jest-cache/: haste-map-e51497ee432cf4f127230100448efae3-6b138f905cfe7eba735f2bcf8c5abe38-c89c5efd6b8d524b7c6564546fc73c3d
.zap/: dev-config.conf  rules.conf
Authorization/: AuthorizationExtensions.cs  Policies.cs  ResourceOwnerHandler.cs  Roles.cs
Configuration/: RbacConfig.cs
Contracts/: AuthContracts.cs  CreateCaseRequest.cs  IngestEmailRequest.cs  PaginationContracts.cs  SearchEventsRequest.cs
Controllers/: AccountController.cs  AdvancedFeaturesController.cs  AdvancedTemplatesController.cs  (+66 more)
(+3692 files in other folders)
