[project]
name = "iapostemanage"
version = "2.3.0"
description = "IA Poste Manager - Email automation with AI"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"